tests/snapshot/error/source_locations/expression/delete/member_delete_property.js
"use strict";

var obj = {};
Object.defineProperty(obj, 'foo', { value: 1, configurable: false });

delete obj.foo;